# SmartCampusSecondhandTradingSystemServer

./: .gitignore  CMakeLists.txt  apihandler.cpp  apihandler.h  databasemanager.cpp  databasemanager.h  httpconnection.cpp  httpconnection.h  httpserver.cpp  httpserver.h  hunyuanclient.cpp  hunyuanclient.h  main.cpp  websocketserver.cpp  websocketserver.h
